[2.0.3]

    * Fixed series missing data with same label but different key value.

[2.0.2]

    * Fixed export bug causing table not to be exported if dataset was too large.
    * Facts view now shows attribute details (#76).
    * Fixed 'apply already in progress' bug when loading a cube after first time.
    * Added masonry library to show improve alignment of Studio views.
    * Added drill more/less buttons to drilldown, horizontal dimension tags and dimension filter.
    * Added dimension filter item filtering based on current view cut.
    * Fixed dimension filter empty list if dimension members contains repeated values.
    * Select next drill level (if available) when clicking on an item in explore mode.
    * Fixed dimension sorting when grid was reused or multiple grids on screen (fixes #71).
    * Fixed CSV export in explore mode (#72).

[2.0.1]

    * Column sorting now follows order_attribute from model.
    * Added AngularJS integration example.
    * Added chart image export support.
    * Line charts now allow various curve types.
    * Google Analytics plugin restored (events tracking).
    * Added warning if server result limit has been hit.
    * Added server information dialog.
    * Added new horizontal columns chart.
    * Added two columns mode and hide controls mode.
    * New icon library and revamped UI.
    * Added automatic content-based column resize feature.
    * Added support for negated cuts (inverse filters).
    * Added support for custom column formatting functions.
    * Added cube metadata option to set view default params.
    * Option to show/hide chart legend.
    * Pie charts are now sorted by size of slice.
    * Serializing now shows JSON in a modal dialog and is easier to copy.

    * Responsive design.
    * More printer-friendly CSS.
    * UI is now refreshed in-place instead of blocking whole UI.
    * Using templating for HTML views (no more HTML/JavaScript spaguetti code).