@@ -1,5 +1,6 @@
 [2.0.3]
 
+    * Fixed chart figure export (was not working). Chart images can again be exported as PNG.
     * Fixed series missing data with same label but different key value.
 
 [2.0.2]
